adicionado o que é CSS

--- a/home.html
+++ b/home.html
@@ -10,7 +10,25 @@
 <body>
 
 <header>
-    
+
+<h1> O que é CSS ?</h1>
+<p> Significa (Cascading Style Sheets) folhas de estilo em cascata </p>
+<p> É uma linguagem que usamos para estilizar um documento HTML, o CSS descreve como os elementos HTML devem ser exibidos </p>
+<p>CSS é usado para definir estilo para suas páginas da web, incluindo design, layout e variaçoes de exibição para diferentes dispositivos e tamanhos de tela  </p>
+
+<h2>Sintaxe CSS</h2>
+<p> A regra do CSS sonsiste em um seletor e um bloco de declaração:</p>
+
+<p> H1 {color: blue; font-size: 12px;} </p>
+
+<ul>
+    <li>O seletor aponta para o elemento HTML que você deseja estilizar</li>
+    <li>O bloco declaraão contém uma ou mais declarações separadas por ponto e virgula </li>
+    <li>Cada declaração inclui um nome de propridade CSS e um valor, separado por dois ponto ";"</li>
+    <li>Os blocos de declaraão são cercados por chaves "{bloco}"</li>
+</ul>
+
+
 
 
 
